Improved documentation